--- a/package.json
+++ b/package.json
@@ -17,5 +17,9 @@
         "tailwindcss": "^3.4.0",
         "vite": "^5.0",
         "vue": "^3.3.13"
+    },
+    "dependencies": {
+        "chart.js": "^4.4.4",
+        "vue-chartjs": "^5.3.1"
     }
 }
